# Mario-Game

./: CMakeLists.txt  Mario.TXT  README.md  SDL_Plotter.cpp  SDL_Plotter.h  Wah.TXT  Waluigi.pptx  changelog.txt  main.cpp  smol.txt
